--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -121,12 +121,8 @@ jobs:
           export PATH="~/.local/bin/kubectl:$PATH"
           kubectl version --client --output=yaml
       - name: create config
-        run: echo "${{ secrets.K8S_CONFIG }}" > k8s.yaml
-      - name: export config
-        run: export KUBECONFIG="$(pwd)/k8s.yaml" && echo ${KUBECONFIG} && kubectl get secret $(kubectl get sa dashboard-sa -o jsonpath='{.secrets[0].name}') -o jsonpath='{.data.token}' | base64 --decode > token
-      - name: create token
-        run: kubectl get secret $(kubectl get sa dashboard-sa -o jsonpath='{.secrets[0].name}') -o jsonpath='{.data.token}' | base64 --decode > token
-      - name: apply all
-        run: kubectl apply -f ./env/prod/k8/ -R
-      - name: restart deployments
-        run: kubectl rollout restart deploy
+        run: |
+          echo "${{ secrets.K8S_CONFIG }}" > k8s.yaml
+          export KUBECONFIG="$(pwd)/k8s.yaml"
+          kubectl apply -f ./env/prod/k8/ -R
+          kubectl rollout restart deploy
