--- a/config/nginx/nginx.prod.conf
+++ b/config/nginx/nginx.prod.conf
@@ -35,42 +35,6 @@ server {
   server_name wave-music.online www.wave-music.online;
   return 301 https://wave-music.online$request_uri;
 
-  location / {
-    include  /etc/nginx/mime.types;
-    gzip            on;
-    proxy_pass http://nodejs.default.svc.cluster.local:8080;
-    gzip_types    text/plain application/javascript application/x-javascript text/javascript text/xml text/css;
-    gzip_min_length 1000;
-
-#     try_files $uri $uri/ /index.html;
-  }
-
-  location /monitoring/prometheus/ {
-    proxy_pass http://caddy.default.svc.cluster.local:9090;
-  }
-
-  location /monitoring/grafana/ {
-    rewrite  ^/monitoring/grafana/(.*)  /$1 break;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection $connection_upgrade;
-    proxy_set_header Host $http_host;
-    proxy_pass http://caddy.default.svc.cluster.local:3000;
-  }
-
-  location /api {
-     proxy_pass http://wave.default.svc.cluster.local:5000;
-  }
-
-  location ^~ /docs/ {
-      index index.html;
-      proxy_pass http://wave.default.svc.cluster.local:5000/docs/;
-  }
-
-  location /metrics {
-      stub_status on;
-  }
-
 }
 server {
   root /var/www/wave;
@@ -95,17 +59,15 @@ server {
   location / {
     include  /etc/nginx/mime.types;
     gzip            on;
-    proxy_set_header                Host wave-music.online;
-#     proxy_set_header                HTTP_Country-Code $geoip_country_code;
-    proxy_pass_request_headers      on;
     proxy_pass http://nodejs.default.svc.cluster.local:8080;
+
     gzip_types    text/plain application/javascript application/x-javascript text/javascript text/xml text/css;
     gzip_min_length 1000;
-
-#     try_files $uri $uri/ /index.html;
   }
 
   location /api {
+     proxy_set_header                Host wave-music.online;
+     add_header Access-Control-Allow-Origin nodejs.default.svc.cluster.local:8080;
      proxy_pass http://wave.default.svc.cluster.local:5000;
   }
 
@@ -125,6 +87,10 @@ server {
     proxy_set_header Connection $connection_upgrade;
     proxy_set_header Host $http_host;
     proxy_pass http://caddy.default.svc.cluster.local:3000;
+  }
+
+  location /metrics {
+      stub_status on;
   }
 
 }
