--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -83,10 +83,9 @@ jobs:
       - name: generate easyjson
         run: chmod +x easyjsonGenerate.sh && ./easyjsonGenerate.sh
       - name: generate test mocks
-        run: cd internal/test && chmod +x mocks.sh && ./mocks.sh
+        run: cd internal/test && chmod +x mocks.sh && ./mocks.sh && cd ../..
       - name: go tests
-        run:
-          chmod +x test.sh && test.sh
+        run: chmod +x test.sh && test.sh
 
   dockerDeploy:
     runs-on: ubuntu-latest
