--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -19,6 +19,8 @@ jobs:
           go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
           go install github.com/favadi/protoc-go-inject-tag@latest
           go install github.com/vektra/mockery/v2@latest
+          go get github.com/mailru/easyjson
+          go install github.com/mailru/easyjson/...@latest
       - uses: actions/checkout@v3
       - name: generate gRPC and docs
         run: chmod +x generateAll.sh && ./generateAll.sh
@@ -47,6 +49,8 @@ jobs:
           go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
           go install github.com/favadi/protoc-go-inject-tag@latest
           go install github.com/vektra/mockery/v2@latest
+          go get github.com/mailru/easyjson
+          go install github.com/mailru/easyjson/...@latest
       - name: generate gRPC and docs
         run: chmod +x generateAll.sh && ./generateAll.sh
       - name: generate easyjson
@@ -78,6 +82,8 @@ jobs:
           go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
           go install github.com/favadi/protoc-go-inject-tag@latest
           go install github.com/vektra/mockery/v2@latest
+          go get github.com/mailru/easyjson
+          go install github.com/mailru/easyjson/...@latest
       - name: generate gRPC and docs
         run: chmod +x generateAll.sh && ./generateAll.sh
       - name: generate easyjson
@@ -99,10 +105,10 @@ jobs:
       - name: Login to DockerHub Registry
         run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
       - name: Build all Docker images
-        run: cd deploy && dockerBuildAll.sh
+        run: cd deploy && ./dockerBuildAll.sh
       - name: Push all Docker images
         run:
-          cd deploy && dockerPushAll.sh
+          cd deploy && ./dockerPushAll.sh
 
   k8s:
     runs-on: ubuntu-latest
