--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -103,10 +103,10 @@ jobs:
       - name: Login to DockerHub Registry
         run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
       - name: Build all Docker images
-        run: cd deploy && chmod +x && ./dockerBuildAll.sh
+        run: cd deploy && chmod +x dockerBuildAll.sh && ./dockerBuildAll.sh
       - name: Push all Docker images
         run:
-          cd deploy && chmod +x && ./dockerPushAll.sh
+          cd deploy && chmod +x dockerBuildAll.sh && ./dockerPushAll.sh
 
   k8s:
     runs-on: ubuntu-latest
